// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": "100%",
      "marginLeft": 2,
      "marginRight": 2,
      "width": "100%",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "alignSelf": "center",
          "backgroundColor": "#141313",
          "borderColor": "#329932",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "height": "100%",
          "margin": 2,
          "width": "100%",
        },
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "fontFamily": "telegrama_raw",
          "fontSize": 20,
          "paddingTop": 13,
          "textAlign": "center",
        }
      }
    />
  </View>
</View>
`;

exports[`MenuButton (with title) => renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": "100%",
      "marginLeft": 2,
      "marginRight": 2,
      "width": "100%",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "alignSelf": "center",
          "backgroundColor": "#141313",
          "borderColor": "#329932",
          "borderRadius": 0,
          "borderWidth": 1,
          "flex": 1,
          "height": "100%",
          "margin": 2,
          "width": "100%",
        },
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "fontFamily": "telegrama_raw",
          "fontSize": 20,
          "paddingTop": 13,
          "textAlign": "center",
        }
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`MenuButton => changes color while finger is held down 1`] = `
Object {
  "alignSelf": "center",
  "backgroundColor": "#329932",
  "borderColor": "#329932",
  "borderRadius": 0,
  "borderWidth": 1,
  "flex": 1,
  "height": "100%",
  "margin": 2,
  "width": "100%",
}
`;

exports[`MenuButton => changes color while finger is held down 2`] = `
Object {
  "alignSelf": "center",
  "backgroundColor": "#141313",
  "borderColor": "#329932",
  "borderRadius": 0,
  "borderWidth": 1,
  "flex": 1,
  "height": "100%",
  "margin": 2,
  "width": "100%",
}
`;
